--- a/src/Reports/EditAndCancelService.form
+++ b/src/Reports/EditAndCancelService.form
@@ -67,7 +67,7 @@
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           <Component id="DepSerCancelButton1" min="-2" pref="125" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="ActionButton" min="-2" pref="125" max="-2" attributes="0"/>
+                          <Component id="ActionButton" min="-2" pref="131" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -244,7 +244,7 @@
         </Component>
         <Component class="button.MyButton" name="ActionButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Update Service"/>
+            <Property name="text" type="java.lang.String" value="Service Update"/>
             <Property name="borderColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="b9" green="b4" red="d" type="rgb"/>
             </Property>
@@ -266,6 +266,9 @@
             <Property name="horizontalTextPosition" type="int" value="2"/>
             <Property name="radius" type="int" value="20"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ActionButtonActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
           <Properties>
