--- a/src/Cashier/Cashier.form
+++ b/src/Cashier/Cashier.form
@@ -218,6 +218,7 @@
             <Property name="radius" type="int" value="20"/>
           </Properties>
           <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="expectedDrawerActionPerformed"/>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="expectedDrawerKeyReleased"/>
           </Events>
         </Component>
